package delta;

class Car implements Vehicle {
    @Override
    public void assemble() {
        System.out.println("Assembling a car with body, wheels, and engine.");
    }
}
