package delta;

class Motorcycle implements Vehicle {
    @Override
    public void assemble() {
        System.out.println("Assembling a motorcycle with a smaller body, two wheels, and compact engine.");
    }
}
