package delta;

class Truck implements Vehicle {
    @Override
    public void assemble() {
        System.out.println("Assembling a truck with larger body, stronger engine, and cargo bed.");
    }
}
