package delta;

interface Vehicle {
    void assemble();
}
